<resources>
    <string name="app_name">Movement Classifier</string>
    <string name="author">Michał Skrzypek</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btn_collect_data">Collect Data</string>
    <string name="btn_classify_movement">Classify movement</string>
    <string name="app_title">Movement classifier</string>

    <string name="error_no_sensor">No sensor</string>
    <string name="label_acc">Linear Accelerometer Sensor:</string>
    <string name="acc_x">X : %1$.2f</string>
    <string name="acc_y">Y : %1$.2f</string>
    <string name="acc_z">Z : %1$.2f</string>
    <string name="label_gyro">Gyroscope Sensor: %1$.2f</string>

    <string name="movement_prompt">Select movement type:</string>

    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="hint_username">Enter your name</string>
    <string name="header">Sensor Data Collector</string>
    <string name="btn_classify">Classify!</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_home_page">Home page</string>
    <string name="email">skrzypekmichal@yahoo.com</string>
    <string name="title_original">Movement Classifier ®</string>
    <string name="home_question">What do you want to do?</string>
</resources>
